# bevy_multicopter

./: .pre-commit-config.yaml  Cargo.toml  README.md
assets/: level.blend  level.blend1  level.glb  quad.blend  quad.blend1  quadcopter.glb
examples/: simulation.rs
src/: lib.rs
