[package]
name = "bevy_quadcopter"
version = "0.1.0"
edition = "2024"
authors = ["Henry Gerard Moore"]
license = "MIT OR Apache-2.0"

[features]
dev = ["bevy_egui", "bevy-inspector-egui"]

[dependencies]
avian3d = "0.4"
bevy = "0.17.3"
bevy_egui = { version = "0.38.0", optional = true }
bevy-inspector-egui = { version = "0.35", optional = true }
serde = "1.0.228"
